# packages/sdk/openapi.json
@@ -2862,6 +2862,11 @@
                         },
                         "at": {
                           "type": "string"
+                        },
+                        "indexed": {
+                          "type": "integer",
+                          "minimum": 0,
+                          "maximum": 9007199254740991
                         }
                       },
                       "required": [
